Revert "Change overflow:hidden to position:fixed"
This reverts commit c00716cbed7554324270796861c40dcb91aa0338.

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -172,7 +172,7 @@ button:hover, .button:hover {
 
 /* no-scroll when mobile navigation is open */
 .no-scroll{
-    position: fixed;
+    overflow: hidden;
 }
 
 .header nav {
